<resources>
    <string name="app_name">pruba</string>
    <string name="title_activity_pantalla_sing">Pantalla_sing</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="iniciar_sesion1">Iniciar Sesion</string>
    <string name="bienvenidos_a_lernish_te_daremos_un_nuevo_enfoque_de_aprendizaje_solo_ingresa_con_tus_datos_aca_abajo">¡Bienvenidos a Lernish! Te daremos un nuevo enfoque de aprendizaje, solo ingresa con tus datos aca abajo.</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="lernish">Lernish</string>
    <string name="lernish_">LERNISH</string>
    <string name="ingresar">Ingresar</string>
    <string name="recordar_contrase_a">Recordar contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="lernish__">LERNISH</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="ll">TODO</string>
</resources>